# bzlcmd

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  cog.toml  install.cmd
.github/: ci.bazelrc
.github/workflows/: main.yml  release.yml
bazel/: copts.bzl  transition.bzl
bazel/registry/: bazel_registry.json
bazel/registry/modules/docopt.cpp/: metadata.json
bazel/registry/modules/docopt.cpp/0.6.2/: MODULE.bazel  source.json
bazel/registry/modules/docopt.cpp/0.6.2/overlay/: BUILD.bazel
bzlmod/: BUILD.bazel  add_module.cc  add_module.hh  bzlmod.cc  download_module_metadata.cc  download_module_metadata.hh  find_workspace_dir.cc  find_workspace_dir.hh  get_registries.cc  get_registries.hh  git_override.cc  git_override.hh  init_module.cc  init_module.hh  patch_module.cc  patch_module.hh  publish_module.cc  publish_module.hh  update_module.cc  update_module.hh
bzlreg/: BUILD.bazel  add_module.cc  add_module.hh  bazel_exec.cc  bazel_exec.hh  bzlreg.cc  calc_integrity.cc  calc_integrity.hh  config_types.hh  decompress.cc  decompress.hh  defer.hh  download.cc  download.hh  gh_exec.cc  gh_exec.hh  init_registry.cc  init_registry.hh  module_bazel.cc  module_bazel.hh  tar_view.cc  tar_view.hh  unused.hh  util.cc  util.hh
patches/: docopt.cpp+0.6.2.patch
test/: bazel_registry.json  test.bat  test.sh
