load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "config_types",
    hdrs = ["config_types.hh"],
    deps = [
        "@nlohmann_json//:json",
    ],
)

cc_binary(
    name = "bzlreg",
    srcs = ["bzlreg.cc"],
    deps = [
        ":config_types",
        "@docopt.cpp//:docopt",
        "@boost.process",
    ],
)
